# finclaw

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secret-patterns  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PERFORMANCE_REPORT.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  RESEARCH_NOTES.md  SECURITY.md  SKILL.md  UPGRADE_PLAN.md  UX_TEST_REPORT.md  _analyze_ahf.py  _commit_msg.txt  _compare_v7_v8.py  _debug_eth.py  _debug_eth_regime.py  _debug_meta_short.py  _debug_nvda3.py  _debug_nvda_v5.py  _debug_signals.py  _debug_sol.py  _debug_vrecovery.py  _diag.py  _diag_aapl2.py  _diag_ahf.py  _diag_crypto.py  _diag_eth.py  _diag_moutai3.py  (+48 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
_scratch/: LAUNCH_PLAN.md  MARKETING_STRATEGY.md  README.md  VISIBILITY-PLAN.md  _analysis_v7.py  _compare_hard.py  _debug_aapl.py  _debug_amzn.py  _debug_bh.py  _debug_btc.py  _debug_bull.py  _debug_new.py  _debug_nvda2.py  _debug_nvda4.py  _debug_path.py  _debug_tsla.py  _diag_moutai.py  _diag_moutai2.py  _diagnose_alpha.py  _exp_nosignal.py  _optimize_weights.py  _test_ai.py  _test_v3.py  _trace_moutai.py  _verify_all_strategies.py  _verify_markets.py  backtest.py  backtest_optimize.py  backtester_v2.py  backtester_v3.py  benchmark_portfolio.py  benchmark_portfolio2.py  benchmark_portfolio3.py  benchmark_v6.py  benchmark_v9.py  debug_amzn.py  debug_scenarios.py  debug_signals.py  run_v1_v2_comparison.py  signal_engine_v8.py  (+3 more)
agents/: __init__.py  ahf_simulator.py  ai_client.py  backtester.py  backtester_v4.py  backtester_v5.py  backtester_v7.py  backtester_v7plus.py  backtester_v8.py  backtester_v9.py  debate_arena.py  deep_macro.py  llm_analyzer.py  macro_analyzer.py  memory.py  registry.py  risk_constitution.py  signal_engine.py  signal_engine_v5.py  signal_engine_v6.py  signal_engine_v7.py  signal_engine_v9.py  statistics.py  stock_picker.py  strategies.py  universe.py
assets/: demo_output.txt
autotrading/: README.md  autotrading.env.example  evaluate.py  program.md  results.tsv  run.py  strategy.py
dashboard/: PRODUCT_PLAN.md  finclaw.config.example.ts  finclaw.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo
docs/: COMPETITIVE_ANALYSIS.md  ECOSYSTEM.md  PERFORMANCE_REPORT.md  README_fr.md  README_ja.md  README_ko.md  README_zh.md  RESEARCH.md  REVIEW_REPORT.md  STRATEGY.md  UPGRADE-V02.md  V03-DIAGNOSIS.md  api-reference.md  api-server.md  api.md  architecture-simple.mmd  architecture.md  architecture.mmd  backtesting.md  cli-reference.md  data-pipeline.md  defi.md  deployment.md  evolution.md  exchanges.md  factor_gap_analysis.md  faq.md  features.md  first-day-analysis.md  getting-started.md  golden-dip-report.md  index.md  limit-up-pullback-report.md  live-trading.md  market-filter-report.md  mcp-server.md  notifications.md  plugins.md  portfolio.md  strategies.md
engine/: Cargo.toml
engine/src/: lib.rs  main.rs
engine/src/core/: engine.rs  types.rs
engine/src/data/: provider.rs
engine/src/exchange/: paper.rs
evolution_results/: best_ever.json  ensemble_picks.json  gen_0009.json  gen_0019.json  gen_0029.json  gen_0039.json  gen_0049.json  gen_0059.json  gen_0069.json  gen_0079.json  gen_0089.json  gen_0099.json  gen_0109.json  gen_0119.json  gen_0129.json  gen_0139.json  gen_0149.json  gen_0159.json  gen_0169.json  gen_0179.json  gen_0189.json  gen_0199.json  gen_0209.json  gen_0219.json  gen_0229.json  gen_0239.json  gen_0249.json  gen_0259.json  gen_0269.json  gen_0279.json  gen_0289.json  gen_0299.json  gen_0309.json  gen_0319.json  gen_0329.json  gen_0339.json  gen_0349.json  gen_0359.json  gen_0369.json  gen_0379.json  (+120 more)
evolution_results_crypto/: gen_0009.json  gen_0019.json  gen_0029.json  gen_0049.json  gen_0059.json  latest.json
examples/: README.md  ai_generated.py  backtest_momentum.py  crypto_rsi.py  custom_strategy.py  ml_pipeline.py  portfolio_optimization.py  screen_oversold.py  simple_momentum.py
examples/strategy-plugin-template/: README.md  pyproject.toml
examples/strategy-plugin-template/finclaw_strategy_example/: __init__.py  strategy.py
examples/strategy-plugin-template/tests/: test_golden_cross.py
factors/: acceleration.py  accumulation_day.py  accumulation_distribution_ratio.py  alpha_close_to_high.py  alpha_decay_linear.py  alpha_delta_volume.py  alpha_high_low_ratio.py  alpha_intraday_momentum.py  alpha_rank_return_20d.py  alpha_rank_return_5d.py  alpha_return_reversal.py  alpha_ts_rank_volume.py  alpha_volume_return_corr.py  amihud_illiquidity.py  ascending_triangle.py  atr_channel_position.py  autocorrelation_1.py  autocorrelation_5.py  best_day_recency.py  bid_ask_proxy.py  body_size_ratio.py  bollinger_squeeze.py  bottom_consecutive_decline_exhaustion.py  bottom_long_lower_shadow.py  bottom_reversal_candle.py  bottom_support_bounce.py  bottom_volume_decline_stabilize.py  breadth_advance_decline.py  breadth_correlation_regime.py  breadth_market_momentum.py  breadth_new_highs_lows.py  breadth_sector_rotation.py  breakout_confirmation.py  breakout_probability.py  buying_climax.py  capitulation_signal.py  chaikin_volatility.py  closing_drive.py  closing_strength.py  coeff_variation_20d.py  (+244 more)
scripts/: __init__.py  _run_crypto_evo_wf.bat  _run_paper_okx.bat  a_stock_scan.py  add_lp.py  add_more_lp.py  alpha158_benchmark.py  analyze_first_day.py  arb_swap.py  arb_swap_v2.py  arb_yields.py  backtest_imminent.py  benchmark_v10.py  bsc_lp.py  build_stock_pool.py  check_arb_wallet.py  check_best.py  check_camelot.py  check_chains.py  check_lock_end.py  check_lp_range.py  check_paper.py  check_prices.py  check_stock.py  check_tw.py  check_v41.py  check_withdrawals.py  cn_scanner_backtest.py  crypto_daily.py  daily_alert.py  daily_signal.py  defi_monitor.py  download_a_shares.py  download_crypto.py  ensemble_backtest.py  ensemble_score.py  factor_report.py  final_lp.py  finclaw.py  find_best_params.py  (+49 more)
src/: __init__.py  cli.py  cn_ml_scorer.py  cn_scanner.py  config.py  config_manager.py  interactive.py  (+1 more)
(+939 files in other folders)
