[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finclaw-ai"
version = "5.1.0"
description = "AI-native quantitative finance platform with MCP server support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "NeuZhou", email = "neuzhou@users.noreply.github.com"}]
keywords = ["quantitative-finance", "trading", "backtesting", "mcp", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.8.0",
    "yfinance>=0.2.0",
    "numpy>=1.21.0",
    "pyyaml>=6.0",
    "scipy>=1.9.0",
    "ccxt>=4.0.0",
    "akshare>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/NeuZhou/finclaw"
Documentation = "https://github.com/NeuZhou/finclaw/tree/master/docs"
Repository = "https://github.com/NeuZhou/finclaw"
Issues = "https://github.com/NeuZhou/finclaw/issues"

[project.scripts]
finclaw = "src.cli.main:main"

[project.optional-dependencies]
full = ["aiohttp", "websockets"]
ml = ["numpy", "scikit-learn"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-aiohttp>=1.0", "pytest-cov>=4.0", "ruff"]

[tool.setuptools.packages.find]
include = ["src*", "agents*", "strategies*"]

[tool.setuptools.package-data]
strategies = ["builtin/*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "integration: marks tests that require network access (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 120
target-version = "py39"
