[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finclaw-ai"
version = "5.1.0"
description = "Self-evolving crypto trading strategies via genetic algorithm — 484 factors, 100+ exchanges, 24/7 autonomous evolution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "NeuZhou", email = "neuzhou@users.noreply.github.com"}]
keywords = ["quantitative-finance", "trading", "backtesting", "mcp", "ai-agent", "crypto", "bitcoin", "genetic-algorithm", "ccxt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.8.0",
    "yfinance>=0.2.0",
    "numpy>=1.21.0",
    "pyyaml>=6.0",
    "scipy>=1.9.0",
    "ccxt>=4.0.0",
    "akshare>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/NeuZhou/finclaw"
Documentation = "https://github.com/NeuZhou/finclaw/tree/master/docs"
Repository = "https://github.com/NeuZhou/finclaw"
Issues = "https://github.com/NeuZhou/finclaw/issues"

[project.scripts]
finclaw = "finclaw.cli.main:main"

[project.optional-dependencies]
crypto = ["ccxt>=4.0"]
full = ["aiohttp", "websockets", "ccxt>=4.0"]
ml = ["numpy", "scikit-learn"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-aiohttp>=1.0", "pytest-cov>=4.0", "ruff"]

[tool.setuptools]
packages = [
    "finclaw", "finclaw.a2a", "finclaw.agents", "finclaw.ai_strategy",
    "finclaw.alerts", "finclaw.analytics", "finclaw.api", "finclaw.backtest",
    "finclaw.backtesting", "finclaw.cli", "finclaw.crypto", "finclaw.dashboard",
    "finclaw.data", "finclaw.data.sinks", "finclaw.data.sources", "finclaw.defi",
    "finclaw.deploy", "finclaw.derivatives", "finclaw.drl", "finclaw.events",
    "finclaw.evolution", "finclaw.exchanges", "finclaw.execution", "finclaw.export",
    "finclaw.fixed_income", "finclaw.indicators", "finclaw.journal", "finclaw.llm",
    "finclaw.mcp", "finclaw.ml", "finclaw.notifications", "finclaw.optimization",
    "finclaw.paper", "finclaw.paper_report", "finclaw.pipeline",
    "finclaw.plugin_system", "finclaw.plugins", "finclaw.plugins.examples",
    "finclaw.portfolio", "finclaw.reporting", "finclaw.reports", "finclaw.risk",
    "finclaw.sandbox", "finclaw.screener", "finclaw.sentiment", "finclaw.simulation",
    "finclaw.strategies", "finclaw.strategies.library", "finclaw.strategy",
    "finclaw.ta", "finclaw.telegram_bot", "finclaw.trading", "finclaw.utils",
    "finclaw.viz", "finclaw.watchlist",
    "agents", "strategies",
]

[tool.setuptools.package-dir]
finclaw = "src"

[tool.setuptools.package-data]
strategies = ["builtin/*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "integration: marks tests that require network access (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 120
target-version = "py39"
