[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finclaw-ai"
version = "5.2.1"
description = "Self-evolving crypto trading strategies via genetic algorithm — 484 factors, 100+ exchanges, 24/7 autonomous evolution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "NeuZhou", email = "neuzhou@users.noreply.github.com"}]
keywords = ["quantitative-finance", "trading", "backtesting", "mcp", "ai-agent", "crypto", "bitcoin", "genetic-algorithm", "ccxt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.8.0",
    "yfinance>=0.2.0",
    "numpy>=1.21.0",
    "pyyaml>=6.0",
    "scipy>=1.9.0",
    "ccxt>=4.0.0",
    "akshare>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/NeuZhou/finclaw"
Documentation = "https://github.com/NeuZhou/finclaw/tree/master/docs"
Repository = "https://github.com/NeuZhou/finclaw"
Issues = "https://github.com/NeuZhou/finclaw/issues"

[project.scripts]
finclaw = "src.cli.main:main"

[project.optional-dependencies]
crypto = ["ccxt>=4.0"]
full = ["aiohttp", "websockets", "ccxt>=4.0"]
ml = ["numpy", "scikit-learn"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-aiohttp>=1.0", "pytest-cov>=4.0", "ruff"]

[tool.setuptools]
packages = [
    "src", "src.a2a", "src.agents", "src.ai_strategy",
    "src.alerts", "src.analytics", "src.api", "src.backtest",
    "src.backtesting", "src.cli", "src.crypto", "src.dashboard",
    "src.data", "src.data.sinks", "src.data.sources", "src.defi",
    "src.deploy", "src.derivatives", "src.drl", "src.events",
    "src.evolution", "src.exchanges", "src.execution", "src.export",
    "src.fixed_income", "src.indicators", "src.journal", "src.llm",
    "src.mcp", "src.ml", "src.notifications", "src.optimization",
    "src.paper", "src.paper_report", "src.pipeline",
    "src.plugin_system", "src.plugins", "src.plugins.examples",
    "src.portfolio", "src.reporting", "src.reports", "src.risk",
    "src.sandbox", "src.screener", "src.sentiment", "src.simulation",
    "src.strategies", "src.strategies.library", "src.strategy",
    "src.ta", "src.telegram_bot", "src.trading", "src.utils",
    "src.viz", "src.watchlist",
    "agents", "strategies",
]

[tool.setuptools.package-data]
strategies = ["builtin/*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "integration: marks tests that require network access (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 120
target-version = "py39"
