[package]
name = "whale-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance trading engine core for WhaleTrader"
license = "MIT"
repository = "https://github.com/lobster-labs/whale-trader"

[lib]
name = "whale_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
pyo3 = { version = "0.23", features = ["auto-initialize", "extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]

[profile.release]
opt-level = 3
lto = true
