[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finclaw-strategy-example"
version = "0.1.0"
description = "Example FinClaw strategy plugin - Golden Cross"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = ["pandas>=1.3.0"]

[project.entry-points."finclaw.strategies"]
golden_cross = "finclaw_strategy_example.strategy:GoldenCrossStrategy"
